styles.css
@font-face {
font-family: 'True Lies';
src:
    local('True Lies'),
    url('True Lies.ttf');
}

body {background-color: grey;}

html {
  scroll-behavior: smooth;
 }

.topnav {
	z-index: 999;
	position:fixed;
	top:5px;
	width: 100%;
  background-color: #333;
  overflow: hidden;
	border-radius: 8px;
}

.topnav a:hover {
  background-color: #ddd;
  color: black;
}
.topnav a.active {
  background-color: rgba(255, 100, 0, .8);
  color: white;
}
.topnav a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
	font-family: helvetica;
}
#hobbies {
	margin-top: 0%;
}
#projects {
 margin-top: 0%;
 padding-bottom: 0%;
}
#top{
	margin-top: 0%;
	padding-bottom: 0%;
}

.projects{
	position: relative;
	bottom:195px;
}

.projects h1{
  font-family: "True Lies";
  font-size: 45px;
  font-style: italic;
  color: white;
  text-shadow: 2px 2px 2px rgba(50, 50, 50, 1);
  position:relative;
  top: 0px;
  text-align: center;
  margin-bottom: 5px;
}

.hobbies h1{
  font-family: "True Lies";
  font-size: 45px;
  font-style: italic;
  color: white;
  text-shadow: 2px 2px 2px rgba(50, 50, 50, 1);
  position:relative;
  top: 15px;
  right: 100px;
  text-align: right;
  margin-bottom: 5px;
}
.head-bar {
	color: white;
	text-shadow: 2px 2px 2px rgba(50, 50, 50, 1);
	text-align: center;
	position: relative;
	top: 50px;

}
.beach{
	max-height: 260px;
	min-height: auto;
	width: 100%;
	border-radius: 7px;
}

.name{
	position: relative;
	bottom: 175px;
	left:0px;
	text-align: center;
	font-family: "True Lies";
	font-size: 70px;
}

.about-me{ /*The projects title*/
	font-family: "True Lies";
	font-size: 45px;
	font-style: italic;
	color: white;
	text-shadow: 2px 2px 2px rgba(50, 50, 50, 1);
	position:relative;
	text-align: center;
	margin-bottom: 5px;
	position:relative;
	bottom:70px;
}
.about{
  position:relative;
  top: -200px;
}

.description{
	position: relative;
	bottom:180px;
	font-family: "Arial Narrow";
	font-style: italic;
}

.contact-info{
	position: relative;
  color: white;
	bottom:191px;
	font-family: "Arial Narrow";
	font-style: italic;
}

/*begin Bio + Profile photo*/
.profile-container{
	padding-bottom: 0px;
	position: relative;
	bottom: 60px;
	margin: auto;
	border-style: solid;
	border-color: rgba(255, 100, 0, .8);
	height: 625px;
	max-width: 800px;
	min-width: 700px;
	background-color: #333;
	border-radius: 10px;

}

.profile-photo{
	width: 45%;
	max-height: 500px;
	float:right;
	position:relative;
	right:8px;
	top:80px;
  border-radius: 10px;
}

.ninja-photo{
	width: 50%;
	max-height: 460px;
	float:right;
	position:relative;
  border-radius: 10px;
	right:25px;
	top:8px;
}

.bio-description {
  margin-right: 390px;
	color: White;
	float: left;
  line-height: 40px;
	text-align: left;
	position: relative;
	font-size: 25px;
	font-style: italic;
	left: 10px;
	bottom: 220px;
	font-family: "Arial Narrow";
}
/*container for the skill bars*/
.container{
	position: relative;
	top:300px;
	width:40%;
	background-color: white;
	border-radius: 25px;
}

.skills {
  text-align: right; /* Right-align text */
  padding-top: 2px; /* Add top padding */
  padding-bottom: 4px; /* Add bottom padding */
  color: black; /* White text color */
}

/*html skill bar*/
.html {
	width: 90%;
	max-height: 15px;
	background-color: #4CAF50;
	border-radius: 25px;
}

.resume{
	font-family: helvetica;
	text-align: center;
	float:left;
	position: relative;
	left: 150px;
	border-style: solid;
}

/* Maine video container */

.vid-project-container{
	margin: auto;
	position: relative;
	top: 20px;
	align-self: center;
	border-style: solid;
	border-color: rgba(255, 100, 0, .8);
	height: 20%;
	max-width: 800px;
	min-width: 700px;
  max-height: 450px;
	background-color: #333;
	border-radius: 10px;
}
.vid-project-container h1{
  text-align: center;
  font-family: "Arial Narrow";
  position: relative;
  top:0px;
  right: -0px;
  color: White;
}

.video video{
	position: relative;
	top:0px;
  left: 20px;
	padding-left: 10px;
	width:60%;
	border-radius: 10px;
}

.vid-description{
	color: White;
	float: right;
	text-align: center;
	position: relative;
	font-size: 20px;
	left: -20px;
	top:0px;
	font-family: "Arial Narrow";
	font-style:italic;
}

/*start of Black Jack Project items*/

.blackjack-project-container{
	position: relative;
	top: 0px;
	margin: auto;
	border-style: solid;
	border-color: rgba(255, 100, 0, .8);
	height: 425px;
	max-width: 800px;
	min-width: 700px;
	background-color: #333;
	border-radius: 10px;
}

.blackjack-project-container h1{
  text-align: center;
  font-family: "Arial Narrow";
  color: White;
}

.blackjack-project-container img{
	max-height: 150px;
	position:relative;
}
.blackjack-project-container button{
	background-color: rgba(50, 200, 240, .9);
	font-family: "Arial Narrow";
	font-style: italic;
	font-size: 15px;
	color: white;
	border-radius:6px;
	float: right;
	height: 35px;
	position: relative;
	left:110px;
	bottom:80px;
	border:none;
  cursor:pointer;
}
.git-button{
  position: relative;
  right: -20px;
}
.blackjack-project-container button:hover{
  background-color:rgba(50, 200, 240, .5);
}
.blackjack-project-container button:active{
  background-color:rgba(200, 200, 200, 1);
}

.blackjack1{
	position:relative;
	top: 10px;
	left: 10px;
  border-radius: 10px;
}
.blackjack2{
	position:relative;
	top: 10px;
	left: 10px;
  border-radius: 10px;
}
.blackjack3{
	position:relative;
	top: 165px;
	right: 193px;
  border-radius: 10px;
}
.blackjack4{
	position:relative;
	top: 10px;
	left: 10px;
  border-radius: 10px;
}

.blackjack-description{
	color: White;
	float: right;
	text-align: center;
	position: relative;
	font-size: 20px;
	right: 80px;
	top:-235px;
	font-family: "Arial Narrow";
	font-style: italic;
}

/*internet scanner items*/
.internet-scanner-project-container{
  margin: auto;
	position: relative;
	bottom: 180px;
	align-self: center;
	border-style: solid;
	border-color: rgba(255, 100, 0, .8);
	height: 50%;
	max-width: 800px;
	min-width: 700px;
	background-color: #333;
	border-radius: 10px;
}

.internet-scanner-project-container h1{
  color: White;
  text-align: center;
  font-family: "Arial Narrow";
}

.internet-scanner-project-container img{
  max-height: 300px;
  position: relative;
  top:0px;
  left: 5px;
  border-radius: 8px;
}
.scan1{
  position:relative;
	top: -10px;
	left: 0px;
  border-radius: 10px;
}

.internet-scanner-project-container button{
	background-color: rgba(50, 200, 240, 1);
	font-family: "Arial Narrow";
	font-style: italic;
	font-size: 15px;
	color: white;
	border-radius:6px;
	float: right;
	height: 35px;
	position: relative;
  left: -90px;
  top: 10px;
	border:none;
  cursor:pointer;
}

.internet-scanner-project-container button:hover{
  background-color:rgba(50, 200, 240, .5);
}
.internet-scanner-project-container button:active{
  background-color:rgba(200, 200, 200, 1);
}

.scanner-description{
  color: White;
  float: right;
  text-align: center;
  position: relative;
  font-size: 19px;
  right: 10px;
  bottom: 300px;
  font-family: "Arial Narrow";
  font-style: italic;
}

/*Start of Resume Division */
.inner-resume{
	margin:auto;
	position: relative;
	top:170px;
	align-self: center;
	align-items: center;
	border-style: solid;
	border-color: rgba(255, 100, 0, .8);
	height: 50%;
	max-width: 800px;
	min-width: 700px;
	max-height: 870px;
	background-color: #333;
	border-radius: 10px;
}

.inner-resume h1{ /*The projects title*/
	font-family: "True Lies";
	font-size: 45px;
	font-style: italic;
	color: white;
	text-shadow: 2px 2px 2px rgba(50, 50, 50, 1);
	text-align: center;
	position:relative;
	top:-90px;
	left: 105px;
}

.inner-resume img{
	max-width: 780px;
	min-width: 680px;
	width: 98%;
	position:relative;
	left:10px;
	top:-115px;
	border-radius: 10px;
}

/*Edits the Blackjack stuff on its own page*/

.topnav-b{
	z-index: 999;
	position:fixed;
	top:5px;
	width: 100%;
  background-color: #333;
  overflow: hidden;
	border-radius: 8px;
}

.topnav-b a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
	font-family: helvetica;
}


.blackjack-description-container{
	position: relative;
	top: 65px;
	margin: auto;
	border-style: solid;
	border-color: rgba(255, 100, 0, .8);
	height: 600px;
	max-width: 850px;
	min-width: 850px;
	background-color: #333;
	border-radius: 10px;
}

.blackjack-d{
  position: relative;
  left:10px;
}

.blackjack1-d{
	position:relative;
	top: 10px;
	left: 10px;
  border-radius: 10px;
}
.blackjack2-d{
	position:relative;
	top: 10px;
	left: 10px;
  border-radius: 10px;
}
.blackjack3-d{
	position:relative;
	top: 10px;
	left: 10px;
  border-radius: 10px;
}
.blackjack4-d{
	position:relative;
	top: 10px;
	left: 10px;
  border-radius:10px;
}

.blackjack-description-container img{
	max-height: 150px;
	position:relative;
}

.heading{
  height:50%;
  min-height: 120px;
  max-width: 700px;
  min-width:570px;
  position:relative;
  right:35px;
  top:50px;
  background-color: #333;
  border-radius: 10px;
  border-style:solid;
  border-color: rgba(255, 100, 0, .8);
}

.heading h1{
  font-family: "True Lies";
  color: white;
  font-size:50px;
  text-shadow: 2px 2px 2px rgba(50, 50, 50, 1);
  position: relative;
  left:70px;
}

.blackjack-description-container p{
  text-align: center;
  color: White;
  font-family: "Arial Narrow";
  font-style: italic;
  font-size: 23px;
  white-space: pre;
  position:relative;
  top:-20px;
  right:60px;
  line-height: 60px;
}

/* Start of Disease Simulator Container */

.disease-sim-container {
  position: relative;
  bottom: 120px;
  margin: auto;
  border-style: solid;
  border-color: rgba(255, 100, 0, .8);
  height: 405px;
  max-width: 800px;
  min-width: 700px;
  background-color: #333;
  border-radius: 10px;
}

.disease-sim-container h1{
  text-align: center;
  font-family: "Arial Narrow";
  position: relative;
  left: 140px;
  color: White;
}

.disease-sim-description p{
  text-align: center;
  color: White;
  font-family: "Arial Narrow";
  font-style: italic;
  font-size: 20px;
  white-space: pre;
  position:relative;
  top:20px;
  left:-10px;
  line-height: 20px;
}

.disease-sim-container button{
  background-color: rgba(50, 200, 240, 1);
  font-family: "Arial Narrow";
  font-style: italic;
  font-size: 15px;
  color: white;
  border-radius:6px;
  float: right;
  height: 35px;
  position: relative;
  right: 130px;
  top: 20px;
  border:none;
  cursor:pointer;
}

.disease-sim-container img{
  max-height: 250px;
  border-radius: 10px;
  position: relative;
  float: left;
  left: 15px;
  top: 30px;
}

/* Start of Run 'N Gun Container */

.run-n-gun-container {
  position: relative;
  bottom: 50px;
  margin: auto;
  border-style: solid;
  border-color: rgba(255, 100, 0, .8);
  height: 405px;
  max-width: 800px;
  min-width: 700px;
  background-color: #333;
  border-radius: 10px;
}

.run-n-gun-container h1{
  text-align: center;
  font-family: "Arial Narrow";
  position: relative;
  left: 0px;
  color: White;
}

.run-n-gun-container p{
  text-align: center;
  color: White;
  font-family: "Arial Narrow";
  font-style: italic;
  font-size: 20px;
  white-space: pre;
  position:relative;
  top:20px;
  left:-10px;
  line-height: 20px;
}

.run-n-gun-container button{
  background-color: rgba(50, 200, 240, 1);
  font-family: "Arial Narrow";
  font-style: italic;
  font-size: 15px;
  color: white;
  border-radius:6px;
  float: right;
  height: 35px;
  position: relative;
  right: 150px;
  top: 20px;
  border:none;
  cursor:pointer;
}

.run-n-gun-container img{
  max-height: 200px;
  border-radius: 10px;
  position: relative;
  float: left;
  left: 15px;
  top: 30px;
}

